Actions
Bug #12104
closedlibkdb_ldap: bitwise comparison always evaluates to false
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
../ldap_misc.c:2233:44: error: bitwise comparison always evaluates to false [-Werror=tautological-compare] if ((mask & KDB_PWD_EXPIRE_TIME_ATTR) == 1) { ^~ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2f0b63d22a9a05291df8f83619060f9805eb7581
commit 2f0b63d22a9a05291df8f83619060f9805eb7581 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T16:36:18.000Z 12104 libkdb_ldap: bitwise comparison always evaluates to false Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions