12104 libkdb_ldap: bitwise comparison always evaluates to false Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>